unpackaged/main/default/objects/ServiceResource/ServiceResource.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>