unpackaged/main/default/objects/ServiceResource/fields/Additional_Job_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Additional_Job_Revenue__c</fullName>
    <formula>Additional_Jobs_Scheduled__c * 150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Job Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>