unpackaged/main/default/objects/ServiceResource/fields/Additional_Jobs_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Additional_Jobs_Scheduled__c</fullName>
    <formula>Number_of_Jobs_Optimized__c - Number_of_Jobs_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Jobs Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>