unpackaged/main/default/objects/ServiceResource/fields/En_Route_Location__c.field-meta.xml
<CustomField>
    <fullName>En_Route_Location__c</fullName>
    <inlineHelpText>Set this value to the location you want to use for your technicians En Route location. This will be used on the map that the customer sees for the first notification</inlineHelpText>
    <label>En Route Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>