unpackaged/main/default/objects/ServiceResource/fields/Is_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Is_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Contractor</label>
    <type>Checkbox</type>
</CustomField>