unpackaged/main/default/objects/ServiceResource/fields/Last_Mile_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Mile_Location__c</fullName>
    <inlineHelpText>Set this value to the location you want to use for your technicians LastMile location. This will be used on the map that the customer sees for the second notification</inlineHelpText>
    <label>Last Mile Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>