unpackaged/main/default/objects/ServiceResource/fields/Number_of_Jobs_Optimized__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Optimized__c</fullName>
    <description>Captures the number of jobs assigned to the Service Resource after optimization has run. Used to calculate the value of additional utilization after optimization has run.</description>
    <label>Number of Jobs Optimized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>