unpackaged/main/default/objects/ServiceResource/fields/Number_of_Jobs_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs_Scheduled__c</fullName>
    <description>Used to capture the number of jobs assigned to the Service Resource before optimization is run. Helps put value behind the increased utilization of the Service Resource</description>
    <label>Number of Jobs Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>