unpackaged/main/default/objects/ServiceResource/fields/Opt_KPI_Reset__c.field-meta.xml
<CustomField>
    <fullName>Opt_KPI_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marking this field &#39;TRUE&quot; will execute a process builder to clear out the values within the fields for the &quot;Optimization KPI&quot; reports and Dashboards.</description>
    <label>Opt KPI Reset</label>
    <type>Checkbox</type>
</CustomField>