unpackaged/main/default/objects/ServiceResource/fields/Optimization_KPI__c.field-meta.xml
<CustomField>
    <fullName>Optimization_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marking this field &#39;TRUE&#39; will include the service resource&#39;s metrics within the Optimization KPI reports and dashboards</description>
    <label>Optimization KPI</label>
    <type>Checkbox</type>
</CustomField>