unpackaged/main/default/objects/ServiceResource/fields/Optimization_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Revenue__c</fullName>
    <description>This formula field calculates the total revenue or value after optimization. It combines the savings from reduction in travel and the increase in revenue due to additional jobs scheduled.</description>
    <formula>Travel_Savings__c + Additional_Job_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optimization Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>