unpackaged/main/default/objects/ServiceResource/fields/Original_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Original_Travel_Time__c</fullName>
    <description>This field is used to capture the total travel time of the service resource within the optimization KPI dashboard before optimization</description>
    <label>Original Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>