unpackaged/main/default/objects/ServiceResource/fields/SDO_SFS_Tracker_Contact__c.field-meta.xml
<CustomField>
    <fullName>SDO_SFS_Tracker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>