unpackaged/main/default/objects/ServiceResource/fields/Travel_Delta__c.field-meta.xml
<CustomField>
    <fullName>Travel_Delta__c</fullName>
    <formula>Original_Travel_Time__c - Updated_Travel_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>