unpackaged/main/default/objects/ServiceResource/fields/Travel_Savings__c.field-meta.xml
<CustomField>
    <fullName>Travel_Savings__c</fullName>
    <description>This formula field is used to calculate the savings to an organization due to the reduction in travel of the service resource</description>
    <formula>Cost_Per_Mile__c * ((Travel_Delta__c / 60) * FSL__Travel_Speed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>