unpackaged/main/default/objects/ServiceResource/fields/Updated_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Updated_Travel_Time__c</fullName>
    <description>This field is used to capture the total travel time of the service resource after optimization</description>
    <label>Updated Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>