unpackaged/main/default/objects/ServiceResource/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Service Lightning (FSL)</fullName>
                <label>Salesforce Field Service (SFS)</label>
            </value>
            <value>
                <fullName>Lightning Scheduler (LS)</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Workforce Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>