unpackaged/main/default/objects/ServiceResource/validationRules/FSL__Capacity_Resource_of_Type_Crew.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &#39;C&#39;))</errorConditionFormula>
    <errorMessage>Capacity Resource Can&#39;t Be of Type Crew</errorMessage>
</ValidationRule>