unpackaged/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>FSL__Priority__c</columns>
    <columns>Is_Contractor__c</columns>
    <columns>Contractor_s_Service_Territory__c</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>ResourceType</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Resources</label>
</ListView>