unpackaged/main/default/objects/ServiceResource/listViews/FSL_Service_Resources.listView-meta.xml
<ListView>
    <fullName>FSL_Service_Resources</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Field Service Lightning (FSL)</value>
    </filters>
    <label>SFS Service Resources</label>
</ListView>