unpackaged/main/default/objects/ServiceResource/listViews/LS_Resources.listView-meta.xml
<ListView>
    <fullName>LS_Resources</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Lightning Scheduler (LS)</value>
    </filters>
    <label>LS Resources</label>
</ListView>