unpackaged/main/default/objects/ServiceResource/listViews/Service_Cloud_Resources.listView-meta.xml
<ListView>
    <fullName>Service_Cloud_Resources</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>Service Cloud Resources</label>
</ListView>