unpackaged/main/default/objects/ServiceResource/listViews/Workforce_Engagement_Resources.listView-meta.xml
<ListView>
    <fullName>Workforce_Engagement_Resources</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>ResourceType</columns>
    <columns>RelatedRecord</columns>
    <columns>User_Type__c</columns>
    <columns>SchedulingConstraint</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Workforce Engagement</value>
    </filters>
    <label>Workforce Engagement Resources</label>
</ListView>